fixed overflow in mobile

--- a/app/javascript/stylesheets/_navbar.scss
+++ b/app/javascript/stylesheets/_navbar.scss
@@ -6,8 +6,10 @@
   background-repeat: no-repeat;
 }
 
-body {
-  overflow-x: hidden !important;
+.wrapper {
+  position: relative;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .section-5 {
@@ -38,8 +40,10 @@ body {
   
   /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
-  body {
-    overflow-x: hidden !important;
+  .wrapper {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
   }
   .masthead {
     height: 35vh;
@@ -292,8 +296,10 @@ body {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-  body {
-    overflow-x: hidden !important;
+  .wrapper {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
   }
   .masthead {
     display: flex;
@@ -544,8 +550,10 @@ body {
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  body {
-    overflow-x: hidden !important;
+  .wrapper {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
   }
   .masthead {
     display: flex;
@@ -797,8 +805,10 @@ body {
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-  body {
-    overflow-x: hidden !important;
+  .wrapper {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
   }
   .masthead {
     display: flex;
@@ -1050,8 +1060,10 @@ body {
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-  body {
-    overflow-x: hidden !important;
+  .wrapper {
+    position: relative;
+    overflow: hidden;
+    max-width: 100%;
   }
   .masthead {
     display: flex;
